# Ground_water_interpolants

./: .gitignore  .replit  COMPARISON.md  QUICK_ANSWER.md  README.md  REGIONAL_INTERPOLATION.md  USAGE_FOR_WTD_MAPPING.md  Water design Scope doc (7)  analyze_clipping_accuracy.py  analyze_heatmap_edge_gaps.py  analyze_heatmap_edges.py  analyze_spacing_discrepancy.py  app.py  app_old.py  automated_heatmap_generator.py  boundary_alignment.py  boundary_only_snapping.py  calculate_heatmap_distances.py  canterbury_page.html  check_centroid_spacing.py  check_database_regional.py  check_heatmap_centroids.py  check_heatmap_status.py  check_last_heatmap_distances.py  check_regional_data.py  composite_heatmap.py  covariate_processing.py  data_loader.py  database.py  database_setup.py  debug_tile_snapping.py  dual_heatmap_generator.py  extend_boundaries.py  final_boundary_snap.py  fix_heatmap_seamless_spacing.py  fix_heatmap_spacing.py  fix_polygon_holes.py  gap_adjusted_sequential.py  gap_adjusted_sequential_complete.py  generate_regional_data.py  (+51 more)
.streamlit/: config.toml
attached_assets/: NZ Geology_1753590503005.tif  NZ Geology_1753591871374.tif  Pasted--1-Choose-a-geological-dataset-via-WMS-REST-Use-GNS-Science-QMAP-1-250k-for-Canterbury-offered-1749357358344_1749357358346.txt  Pasted--Why-Coordinate-Conversions-Are-Needed-You-re-juggling-three-coordinate-systems-WGS84-EPSG-432-1759219706849_1759219706850.txt  Pasted--jupyter-jupytext-text-representation-extension-py-format-1761966488267_1761966488268.txt  Why rasterizing works better for_1753693613906.txt  (+31 more)
examples/: README.md  (+3 more)
(+150 files in other folders)
