[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.6",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.1",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "scipy>=1.15.3",
    "trafilatura>=2.0.0",
    "requests>=2.32.3",
    "geopandas>=1.0.1",
    "scikit-gstat>=1.0.21",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.3",
    "geojson>=3.2.0",
]
